dim/spec/test_input/invalid_input/invalid_config_entry_attribute.dim
Config:
  - originator: CompanyName
    files: abc
    category: software
    wrong: attribute
